[project]
name = "ytb-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "google-api-python-client>=2.193.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "streamlit>=1.55.0",
    "tabulate>=0.10.0",
    "xlrd>=2.0.2",
]
