[project]
name = "ytb-script"
version = "0.1.0"
description = "YouTube Keyword Evaluator — Streamlit app, REST API, and MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── Core analysis ─────────────────────────────────────────────────
    "colorama>=0.4.6",
    "google-api-python-client>=2.193.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "tabulate>=0.10.0",
    "xlrd>=2.0.2",
    # ── Streamlit app ─────────────────────────────────────────────────
    "streamlit>=1.55.0",
    # ── REST API ──────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # ── MCP server ────────────────────────────────────────────────────
    "fastmcp>=2.0.0",
    # ── Shared ────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pandas-stubs>=3.0.0.260204",
    "ruff>=0.15.11",
    "types-colorama>=0.4.15.20260408",
    "types-tabulate>=0.10.0.20260408",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "fastmcp.*"]
ignore_missing_imports = true
